--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
+            <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:63px; height:63px; object-fit:contain; display:block; margin:0 auto;" />
         </div>
         <h1>Sign in to BMS</h1>
         <div class="subtitle">Access your account and manage your blogs!</div>
@@ -36,42 +36,12 @@
         </div>
         <button class="google-btn" type="button">
             <img src="/static/Assets/Google logo.png" alt="Google logo" class="google-icon" />
-            Log in with Google
+            Continue with Google
         </button>
         <div class="footer">
             Don't have an account?
-            <a href="signup.html" class="signup-link">Sign Up</a>
+            <a href="/signup" class="signup-link">Sign Up</a>
         </div>
     </div>
-    <h1>Sign in to BMS</h1>
-    <div class="subtitle">Access your account and manage your blogs!</div>
-    <form>
-      <div class="input-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="you@email.com" required />
-      </div>
-      <div class="input-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password" required />
-      </div>
-      <button class="login-btn" type="submit">Sign in</button>
-    </form>
-    <div class="forgot-row" style="justify-content:center; margin: 0 0 18px 0;">
-      <a href="#">Forgot password?</a>
-    </div>
-    <div class="divider">
-      <div class="divider-line"></div>
-      <div class="divider-text">Or continue</div>
-      <div class="divider-line"></div>
-    </div>
-    <button class="google-btn" type="button">
-      <img src="/static/Assets/Google logo.png" alt="Google logo" class="google-icon" />
-      Log in with Google
-    </button>
-    <div class="footer">
-      Don't have an account?
-      <a href="signup.html" class="signup-link">Sign Up</a>
-    </div>
-  </div>
 </body>
 </html>
