--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -342,7 +342,7 @@
     </button>
 
     <div class="bottom-link">
-      Already have an account? <a href="/login">Login In</a>
+      Already have an account? <a href="/log-in">Login In</a>
     </div>
   </div>
 </body>
