--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -5,50 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login Page</title>
   <link rel="stylesheet" href="/static/css/login.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div class="logo">
-            <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:130px; height:130px; object-fit:contain; display:block; margin:0 auto;" />
-        </div>
-        <h1>Sign in to BMS</h1>
-        <div class="subtitle">Access your account and manage your blogs!</div>
-        <form action="/auth/log-in" method="POST">
-            {% csrf_token %}
-            <div class="input-group">
-                <label for="email">Email</label>
-                <input type="text" id="email" name="email" placeholder="you@email.com" required />
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Password" required />
-            </div>
-            <button class="login-btn" type="submit">Sign in</button>
-        </form>
-        <div class="forgot-row" style="justify-content:center; margin: 0 0 18px 0;">
-            <a href="#">Forgot password?</a>
-        </div>
-        <div class="divider">
-            <div class="divider-line"></div>
-            <div class="divider-text">Or continue</div>
-            <div class="divider-line"></div>
-        </div>
-        <button class="google-btn" type="button">
-            <img src="/static/Assets/Google logo.png" alt="Google logo" class="google-icon" />
-            Log in with Google
-        </button>
-        <div class="footer">
-            Don't have an account?
-            <a href="signup.html" class="signup-link">Sign Up</a>
-        </div>
+  <div class="container">
+    <div class="logo">
+      <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:100px; height:100px; object-fit:contain; display:block; margin:0 auto;" />
     </div>
+
     <h1>Sign in to BMS</h1>
     <div class="subtitle">Access your account and manage your blogs!</div>
-    <form>
+
+    <form action="/auth/log-in" method="POST">
       <div class="input-group">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="you@email.com" required />
+        <input type="text" id="email" name="email" placeholder="you@email.com" required />
       </div>
       <div class="input-group">
         <label for="password">Password</label>
@@ -56,21 +28,25 @@
       </div>
       <button class="login-btn" type="submit">Sign in</button>
     </form>
-    <div class="forgot-row" style="justify-content:center; margin: 0 0 18px 0;">
-      <a href="#">Forgot password?</a>
+
+    <div class="forgot-row">
+      <a href="#" class="forgot-link">Forgot password?</a>
     </div>
+
     <div class="divider">
       <div class="divider-line"></div>
       <div class="divider-text">Or continue</div>
       <div class="divider-line"></div>
     </div>
+
     <button class="google-btn" type="button">
       <img src="/static/Assets/Google logo.png" alt="Google logo" class="google-icon" />
       Log in with Google
     </button>
+
     <div class="footer">
       Don't have an account?
-      <a href="signup.html" class="signup-link">Sign Up</a>
+      <a href="/sign-up" class="signup-link">Sign Up</a>
     </div>
   </div>
 </body>
