--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="logo">
-      <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo" style="width:100px; height:100px; object-fit:contain; display:block; margin:0 auto;" />
+      <img src="/static/Assets/Digital Pathshala logo.jpg" alt="Blog Website Logo"/>
     </div>
 
     <h1>Sign in to BMS</h1>
