--- a/static/css/login.css
+++ b/static/css/login.css
@@ -7,6 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  
 }
 
 .container {
@@ -19,6 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   border: solid 2px #111b15;
+  margin-top: 12%;
 }
 
 .logo {
