--- a/templates/pages/add-blog.html
+++ b/templates/pages/add-blog.html
@@ -7,15 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Blog Page</title>
     <link rel="stylesheet" href="/static/css/add-blog.css" />
-    <link rel="shortcut icon" href="/static/Assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/assets/favicon.ico" type="image/x-icon">
 </head>
-
+ {% include "layout/header.html" %}
 <body>
-    {% include "layout/header.html" %}
-
-    <div class="body">
+     <div class="body">
         <div class="topaddsection">
-            <img src="/static/Assets/working_boy.png" alt="Hello World"/>
+            <img src="/static/assets/working_boy.png" alt="Hello World"/>
             </div>
         <div class="addsection">
             <div class="innersection">
@@ -36,10 +34,24 @@
 
                     <div class="form-group">
                         <label for="blogContent">Content</label>
-                        <div class="editor-container">
-                            
-                            <div id="editor" class="editor-content" contenteditable="true"></div>
+                        <div class="editor-toolbar">
+                            <select id="formatBlock" class="toolbar-btn">
+                                <option value="P">Paragraph</option>
+                                <option value="H1">Heading 1</option>
+                                <option value="H2">Heading 2</option>
+                                <option value="H3">Heading 3</option>
+                            </select>
+                            <button type="button" class="toolbar-btn" data-command="bold" title="Bold"><b>B</b></button>
+                            <button type="button" class="toolbar-btn" data-command="italic" title="Italic"><i>I</i></button>
+                            <button type="button" class="toolbar-btn" data-command="underline" title="Underline"><u>U</u></button>
+                            <button type="button" class="toolbar-btn" data-command="justifyLeft" title="Align Left">&#8676;</button>
+                            <button type="button" class="toolbar-btn" data-command="justifyCenter" title="Align Center">&#8596;</button>
+                            <button type="button" class="toolbar-btn" data-command="justifyRight" title="Align Right">&#8677;</button>
+                            <button type="button" class="toolbar-btn" data-command="justifyFull" title="Justify">&#8597;</button>
+                            <button type="button" class="toolbar-btn" data-command="insertOrderedList" title="Numbered List">1.</button>
+                            <button type="button" class="toolbar-btn" data-command="insertUnorderedList" title="Bulleted List">&#8226;</button>
                         </div>
+                        <div id="editor" class="editor-content" contenteditable="true"></div>
                     </div>
 
                     <div class="form-group">
@@ -74,7 +86,16 @@
         const editor = document.getElementById('editor');
         const toolbarButtons = document.querySelectorAll('.toolbar-btn');
 
+        // Handle formatBlock dropdown
+        const formatBlock = document.getElementById('formatBlock');
+        formatBlock.addEventListener('change', function() {
+            document.execCommand('formatBlock', false, this.value);
+            editor.focus();
+        });
+
+        // Handle toolbar buttons
         toolbarButtons.forEach(button => {
+            if (button.tagName === 'SELECT') return;
             button.addEventListener('click', function() {
                 const command = this.dataset.command;
                 document.execCommand(command, false, null);
@@ -82,6 +103,7 @@
             });
         });
     </script>
+</body>
 </body>
 
 </html>
