--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/static/css/login.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+{% include "layout/header.html" %}
 
 <body>
   <div class="container">
