Updated Header border color

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -11,7 +11,7 @@
     --secondary-color: #626161;
     --text-color: #3a3a3a;
     --background-color: #f0fff4;
-    --border-color: #e9ecef;
+    --border-color: #bdbec0;
     --shadow-color: rgba(0, 0, 0, 0.435);
     --editor-bg: #ffffff;
     --toolbar-bg: #f8f9fa;
