--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -18,107 +18,25 @@
         <h1>All Blogs</h1>
         <div class="blog-list">
 
-          <!-- Blog 1 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog1.png.jpeg" alt="AI in 2025" />
-            <h2>Understanding AI in 2025</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 2 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog2.png.jpeg" alt="Nepal Mountains" />
-            <h2>Exploring the Mountains of Nepal</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read-More</a>
-          </div>
-
-          <!-- Blog 3 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog3.png.jpeg" alt="HTML CSS Tips" />
-            <h2>Top HTML/CSS Tips for Beginners</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read-More</a>
-          </div>
-
-          <!-- Blog 4 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog4.png.jpeg" alt="Self-Care Writing" />
-            <h2>Self-Care Through Writing</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read-More</a>
-          </div>
-
-          <!-- Blog 5 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog14.jpeg" alt="Digital Marketing" />
-            <h2>Basics of Digital Marketing</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 6 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog6.png" alt="Blogging Platforms" />
-            <h2>Best Platforms for Bloggers in 2025</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 7 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog7.jpeg" alt="Health and Routine" />
-            <h2>Boost Your Health with Routines</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 8 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog8.jpeg" alt="Courses and Learning" />
-            <h2>Top Free Courses to Upskill in 2025</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 9 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog9.jpeg" alt="Tech Career Growth" />
-            <h2>Essential Skills to Boost Your Tech Career in 2025</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 10 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog10.jpeg" alt="Remote Work Tips" />
-            <h2>How to Stay Productive While Working Remotely</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 11 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog11.jpeg" alt="AI Tools in 2025" />
-            <h2>Top AI Tools You Should Be Using in 2025</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
-
-          <!-- Blog 12 -->
-          <div class="blog-card">
-            <img src="/static/assets/blog14.jpeg" alt="Portfolio Building" />
-            <h2>How to Build a Standout Portfolio as a Developer</h2>
-            <div class="author">By: Purnima Basnet</div>
-            <a href="#" class="read-more">Read More</a>
-          </div>
+          <!-- Dynamic Blogs Loading Section -->
+          {% for blog in blogs %}
+            <div class="blog-card">
+              <img src="{{ blog.image.url }}" alt="{{ blog.title }}" />
+              <h2>{{ blog.title }}</h2>
+              <div class="author">By: {{ blog.author }}</div>
+              <a href="#" class="read-more">Read More</a>
+            </div>
+          {% empty %}
+            <div class="blog-card">
+              <p>No recent blogs available.</p>
+            </div>
+          {% endfor %}
 
         </div>
       </div>
     </div>
 
-    <!--  Only Categories Button -->
+    <!-- Only Categories Button -->
     <div class="sidebardropdown">
       <div class="categories-dropdown">
         <button class="dropdown-button">Categories ▼</button>
