--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -19,6 +19,7 @@
     <div class="subtitle">Access your account and manage your blogs!</div>
 
     <form action="/auth/log-in/" method="POST">
+      {% csrf_token %}
       <div class="input-group">
         <label for="email">Email</label>
         <input type="text" id="email" name="email" placeholder="you@email.com" required />
