--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -31,8 +31,12 @@
                     <li><a href="/about-us">About Us</a></li> |
                     <li><a href="/blogs">Blogs</a></li> |
                    <li><a href="/add-blog">Write</a></li> |
+                   {% if not user.is_authenticated %}
                     <li><a href="/auth/log-in">Log-In</a></li> |
-                    <li><a href="/auth/sign-up" class="getstarted-btn">Get Started</a></li>
+                   {% endif %}
+                    <li>
+                      <a href="{% if user.is_authenticated %}/add-blog{% else %}/auth/sign-up{% endif %}" class="getstarted-btn">Get Started</a>
+                    </li>
                 </ul>
             </div>
         </div>
