--- a/templates/pages/auth/signup.html
+++ b/templates/pages/auth/signup.html
@@ -9,7 +9,14 @@
 
 
 <body>
-  <form class="space-y-4" method="post" action="/auth/signup-user" enctype="multipart/form-data">
+  {% if messages %}
+  <ul class="messages" style="list-style:none; padding:10px; margin-bottom:15px;">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %} style="color: green; font-weight: bold; margin-bottom: 5px;">{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+  <form class="space-y-4" method="post" action="/auth/signup-user/" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="container">
       <div class="logo">
@@ -17,37 +24,59 @@
       </div>
       <h2>Register user to Digital Pathshala</h2>
       <p class="subtitle">Access your account and manage your blogs!</p>
-      <form>
+      
         <div class="name-container">
           <div class="input-group">
-            <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first-name" placeholder="First Name"/>
+            <label for="first_name">First Name</label>
+            <input type="text" id="first_name" name="first_name" placeholder="First Name"/>
+            {% if errors.first_name %}
+            <span class="text-sm text-red-500">{{ errors.first_name }}</span>
+            {% endif %}
           </div>
+
           <div class="input-group">
-            <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last-name" placeholder="Last Name"/>
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" name="last_name" placeholder="Last Name"/>
+            {% if errors.last_name %}
+            <span class="text-sm text-red-500">{{ errors.last_name }}</span>
+            {% endif %}
           </div>
         </div>
 
         <div class="input-group">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" placeholder="Username"/>
+          {% if errors.username %}
+          <span class="text-sm text-red-500">{{ errors.username }}</span>
+          {% endif %}
+        </div>
+
+         <div class="input-group">
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" placeholder="Email"/>
+          {% if errors.email %}
+            {%for error in errors.email%}
+            <span class="text-sm text-red-500">{{ error }}</span>
+            {% endfor %}
+          {% endif %}
         </div>
 
         <div class="input-group">
           <label for="password">Password</label>
           <input type="password" id="password" name="password" placeholder="Password"/>
+          {% if errors.password %}
+          {%for error in errors.password%}
+          <span class="text-sm text-red-500">{{ error}}</span>
+          {% endfor %}
+          {% endif %}
         </div>
 
         <div class="input-group">
-          <label for="confirm-password">Confirm Password</label>
-          <input
-            type="password"
-            id="confirm-password"
-            name="confirm-password"
-            placeholder="Confirm your password"
-            required
-          />
+          <label for="confirm_password">Confirm Password</label>
+          <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm Password"/>
+          {% if errors.confirm_password %}
+          <span class="text-sm text-red-500">{{ errors.confirm_password }}</span>
+          {% endif %}
         </div>
 
         <div class="name-container">
@@ -300,10 +329,17 @@
                   <option value="Zambia">Zambia</option>
                   <option value="Zimbabwe">Zimbabwe</option>
             </select>
+            {% if errors.nationality %}
+            <span class="text-sm text-red-500">{{ errors.nationality }}</span>
+            {% endif %}
+            
           </div>
           <div class="input-group">
             <label for="address">Address</label>
             <input type="text" id="address" name="address" placeholder="Address"/>
+          {% if errors.address %}
+          <span class="text-sm text-red-500">{{ errors.address }}</span>
+          {% endif %}
           </div>
         </div>
 
@@ -311,6 +347,10 @@
           <div class="input-group">
             <label for="dob">Date of Birth</label>
             <input type="date" id="dob" name="dob"/>
+            {% if errors.dob %}
+            <span class="text-sm text-red-500">{{ errors.dob }}</span>
+            {% endif %}
+
           </div>
           <div class="input-group">
             <label for="gender">Gender</label>
@@ -319,17 +359,26 @@
               <option value="Male">Male</option>
               <option value="Other">Other</option>
             </select>
+            {% if errors.gender %}
+            <span class="text-sm text-red-500">{{ errors.gender }}</span>
+            {% endif %}
           </div>
         </div>
 
         <div class="input-group">
           <label for="phone">Phone Number</label>
           <input type="tel" id="phone" name="phone" placeholder="Phone Number"/>
+          {% if errors.phone %}
+          <span class="text-sm text-red-500">{{ errors.phone }}</span>
+          {% endif %}
         </div>
 
         <div class="input-group">
-          <label for="profile-image">Profile Image</label>
-          <input type="file" id="profile-image" name="profile-image"/>
+          <label for="profile_image">Profile Image</label>
+          <input type="file" id="profile_image" name="profile_image"/>
+          {% if errors.profile_image %}
+          <span class="text-sm text-red-500">{{ errors.profile_image }}</span>
+          {% endif %}
         </div>
 
         <button type="submit" class="signup-btn">Sign Up</button>
