--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -30,8 +30,8 @@
             <div class="nav">
                 <ul>
                     <li><a href="/about-us">About Us</a></li> |
-                    <li><a href="/blogs">Blogs</a></li> |
-                   <li><a href="/add-blog">Write</a></li> |
+                    <li><a href="/blogs/blogs">Blogs</a></li> |
+                   <li><a href="/blogs/add-blog">Write</a></li> |
                     <li><a href="/auth/log-in">Log-In</a></li> |
                     <li><a href="/auth/sign-up" class="getstarted-btn">Get Started</a></li>
                 </ul>
@@ -50,8 +50,8 @@
         </div>
         <ul class="sidebar-nav">
             <li><a href="/about-us">About Us</a></li>
-            <li><a href="/blogs">Blogs</a></li>
-            <li><a href="/add-blog">Write</a></li>
+            <li><a href="/blogs/blogs">Blogs</a></li>
+            <li><a href="/blogs/add-blog">Write</a></li>
             <li><a href="/log-in">Log In</a></li>
             <li><a href="/sign-up" class="getstarted-btn">Get Started</a></li>
         </ul>
