--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 .textheading {
-    background-color: #d1f9dc;
+    background-color: #beffd0;
     display: flex;
     align-items: center;
     justify-content: space-between;
